Updated Ordered Image Placeholder

--- a/theprocess.html
+++ b/theprocess.html
@@ -200,8 +200,8 @@
         <h2 class="featurette-heading fw-normal lh-1">Recieve Your Painting.</h2>
         <p class="lead">Receive your digital oil painting in less than 24 hours from placing an order. You will get an email once your order is complete, and you can check back on your account tab in the Pittura App to download your painting and order information.</p>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <div class="col-md-5" style="text-align: center;">
+        <img width="300" height="500" src="assets/images/demo/orderedImage.png">
 
       </div>
     </div>
